feat(FSADT1-973): updating tests and adding bc registry